Localize boolean formatter